--- a/manifest.json
+++ b/manifest.json
@@ -1,11 +1,13 @@
 {
-"update_url": "https://clients2.google.com/service/update2/crx",
-
   "manifest_version": 3,
-  "name": "Sum Select",
-  "version": "4.1",
-  "description": "Sum Select enriches browsing and editing. Highlight text and instantly get the word & char count with this simple Chrome extension.",
+  "name": "__MSG_extName__",
+  "version": "6.5",
+  "description": "__MSG_extDescription__",
+  "default_locale": "en",
   "permissions": ["storage"],
+  "host_permissions": [
+    "https://clients2.google.com/service/update2/crx"
+  ],
   "options_page": "options.html",
   "action": {
     "default_popup": "popup.html",
@@ -15,13 +17,20 @@
       "128": "images/icon128.png"
     }
   },
+  "icons": {
+    "16": "images/icon16.png",
+    "48": "images/icon48.png",
+    "128": "images/icon128.png"
+  },
   "content_scripts": [
     {
       "matches": ["<all_urls>"],
-      "js": ["content.js"]
+      "js": ["content.js"],
+      "css": ["styles.css"],
+      "run_at": "document_end"
     }
   ],
-  "host_permissions": [
-    "https://clients2.google.com/service/update2/crx"
-  ]
+  "content_security_policy": {
+    "extension_pages": "script-src 'self'; object-src 'self'"
+  }
 }
